DRAppPackage/force-app/main/default/objects/DR_Centre__c/DR_Centre__c.object-meta.xml
<CustomObject>
    <label>DR Centre(Offline)</label>
    <nameField>
        <label>Meeting Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DR Centres(Offline)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>