DRAppPackage/force-app/main/default/objects/DR_Centre__c/fields/Building_Picture__c.field-meta.xml
<CustomField>
    <fullName>Building_Picture__c</fullName>
    <inlineHelpText>Make sure when inserting the picture, it is 400x400 pixels</inlineHelpText>
    <label>Building Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>