DRAppPackage/force-app/main/default/objects/DR_Centre__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street &amp; Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>